--- a/ApiGateway/src/main/resources/application.yml
+++ b/ApiGateway/src/main/resources/application.yml
@@ -38,12 +38,14 @@ spring:
 eureka:
   client:
     service-url:
-      default-zone: http://eureka-server:8761/eureka/
+      default-zone: http://localhost:8761/eureka/
     fetch-registry: true
     register-with-eureka: true
+    registry-fetch-interval-seconds: 5
   instance:
-    prefer-ip-address: true
-    hostname: api-gateway
+    prefer-ip-address: false
+    hostname: localhost
+    instance-id: ${spring.application.name}:${server.port}
 
 application:
   jwt:
