--- a/AuthenticationService/src/main/resources/application.properties
+++ b/AuthenticationService/src/main/resources/application.properties
@@ -16,8 +16,10 @@ application.jwt.expiration-ms=86400000
 # Management endpoints
 management.endpoints.web.exposure.include=health,info,metrics
 
-#eureka.client.service-url.default-zone=http://localhost:8761/eureka/
-#eureka.client.fetch-registry=true
-#eureka.client.register-with-eureka=true
-#eureka.instance.prefer-ip-address=false
-#eureka.instance.hostname=renting-transaction-service
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.registry-fetch-interval-seconds=5
+eureka.instance.prefer-ip-address=false
+eureka.instance.hostname=localhost
+eureka.instance.instance-id=${spring.application.name}:${server.port}
