--- a/CustomerManagementService/src/main/resources/application.properties
+++ b/CustomerManagementService/src/main/resources/application.properties
@@ -10,11 +10,13 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.properties.hibernate.format_sql=true
 
-#eureka.client.service-url.default-zone=http://localhost:8761/eureka/
-#eureka.client.fetch-registry=true
-#eureka.client.register-with-eureka=true
-#eureka.instance.prefer-ip-address=false
-#eureka.instance.hostname=renting-transaction-service
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.registry-fetch-interval-seconds=5
+eureka.instance.prefer-ip-address=false
+eureka.instance.hostname=localhost
+eureka.instance.instance-id=${spring.application.name}:${server.port}
 
 # Management endpoints
 management.endpoints.web.exposure.include=health,info,metrics
