--- a/CarManagementService/src/main/resources/application.properties
+++ b/CarManagementService/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=car-management-service
 server.port=8082
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;database=CarDB;encrypt=true;trustServerCertificate=true;loginTimeout=30;
+spring.datasource.url=jdbc:sqlserver://192.168.1.8:1434;database=CarDB;encrypt=true;trustServerCertificate=true;loginTimeout=30;
 spring.datasource.username=sa
 spring.datasource.password=Password123!
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
@@ -14,7 +14,7 @@ eureka.client.service-url.default-zone=http://localhost:8761/eureka/
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 eureka.client.registry-fetch-interval-seconds=5
-eureka.instance.prefer-ip-address=false
+eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=localhost
 eureka.instance.instance-id=${spring.application.name}:${server.port}
 
