--- a/RentingTransactionService/src/main/resources/application-docker.properties
+++ b/RentingTransactionService/src/main/resources/application-docker.properties
@@ -1,7 +1,7 @@
 spring.application.name=renting-transaction-service
 server.port=8083
 
-spring.datasource.url=jdbc:sqlserver://host.docker.internal:1433;database=RentingDB;encrypt=true;trustServerCertificate=true;loginTimeout=30;
+spring.datasource.url=jdbc:sqlserver://192.168.1.8:1434;database=RentingDB;encrypt=true;trustServerCertificate=true;loginTimeout=30;
 spring.datasource.username=sa
 spring.datasource.password=Password123!
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
